--- a/index.html
+++ b/index.html
@@ -390,6 +390,41 @@ DIV.Section1 {
 in Reverse Chronological Order</font></h1>
 
       <ul>
+      
+      <li>
+					<p><span dir="LTR"><span class="style14">Itay Berman</span></span><span style="font-weight: 400;"><span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">
+					and Iftach Haitner</span> </span>
+		  </span><br>
+					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
+					Manuscript 2011 <span style="font-weight: 400;">
+					<span dir="LTR" class="style14">
+					<a href="papers/AdaptivePRF/AdaptivePRF.pdf">[PDF]</a></span></span></span></p>
+					</li>
+					
+			<div class="box" id="abstract-CoinFlipping" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
+					  <h2><span style="font-weight: 400;"> Unlike the standard notion of pseudorandom functions (PRF), a non-adaptive 
+PRF is only required to be indistinguishable from random in the eyes of a 
+non-adaptive distinguisher (i.e., one that prepares its oracle calls in 
+advance). A recent line of research has studied the possibility of a direct 
+construction of adaptive PRFs from non-adaptive ones, where direct means that 
+the constructed adaptive PRF uses only few (ideally, constant number of) calls 
+to the underlying non-adaptive PRF. Unfortunately, this study has only yielded 
+negative results, showing that ``natural&quot; such constructions are unlikely to 
+exist (e.g., Myers [EUROCRYPT &#39;04], Pietrzak05
+[CRYPTO &#39;05, EUROCRYPT &#39;06]).<br />
+<br />
+We give an affirmative answer to the above question, presenting a <strong>direct</strong> 
+construction of adaptive PRFs from non-adaptive ones. Our construction is 
+extremely simpleת, a composition of the non-adaptive PRF with an appropriate 
+pairwise independent hash function. In particular, the resulting PRF only makes 
+a <strong>single</strong> call to the non-adaptive PRF.</p>
+			
+  </span></h2>
+					</div>
+
+
+
+
 
 <li>
 					<p><span style="font-weight: 400;">
@@ -400,7 +435,7 @@ in Reverse Chronological Order</font></h1>
 		  </span><br>
 					<strong>Coin Flipping with Constant Bias Implies One-Way 
 					Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
-					To appear in FOCS 2011 <span style="font-weight: 400;">
+					FOCS 2011 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
 					<a href="papers/CoinFlipping/CoinFlippingtoOWF_FOCS.pdf">
 					[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a></span></span><br><span style="font-weight: 400;"><span dir="LTR" class="style14">Draft of full version
@@ -511,7 +546,7 @@ provided the number of signing queries is a-priori bounded</span><span class="au
 		  and <a href="http://www.cs.technion.ac.il/~erez/">Erez Petrank</a> </span>
 		  </span><br>
 					<span class="style14"><strong>Black-Box Constructions of 
-					Protocols for Secure Computation <span style="font-weight: 400;">[<a href="javascript:toggle('abstract-BBMPX')">Abstract</a>]</span>&nbsp;</strong><span style="font-weight: 400;"><span dir="LTR" style="font-weight: 400"><b><img height="12" src="updated.gif" width="60"></b></span></span><br>
+					Protocols for Secure Computation <span style="font-weight: 400;">[<a href="javascript:toggle('abstract-BBMPX')">Abstract</a>]</span>&nbsp;</strong><br>
 		  <span style="font-weight: 400;"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
 		  Journal of Computing 2011</span></span></span></span>
 					<span style="font-weight: 400;"><span class="style14">
@@ -1131,11 +1166,13 @@ that the receiver does not learn any additional information on
 		  <span style="" lang="EN-US">Omer Reingold</span></a></span></span><span style="font-weight: 400;"><br>
 		  <span dir="LTR"><b>On the Power of the Randomized Iterate</b> [<a href="javascript:toggle('abstract-RI')">Abstract</a>]
 				<span style="color: blue;">[</span><a href="papers/RandomizedIteate/Randomized_Iterate.pps">Slides</a><span style="color: blue;">]</span></span></span><br><span style="font-weight: 400;">
-		  Advanced in Cryptology - CRYPTO, 2006
+		  To appear in
+					<span class="style14"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
+		  Journal of Computing </span></span></span><br>Advanced in Cryptology - CRYPTO, 2006
 				<a href="papers/RandomizedIteate/Randomized_Iterate_CryptoCR.pdf">[PDF]</a><br>
 		  <span class="style5">Draft of full version</span><span style="color: blue;"><span style="color: blue;"> 
-		  <a href="papers/RandomizedIteate/Main_Random_iterate_Ver4.pdf">[PDF]</a><b>
-		  </b></span></span></span></h2>
+		  <a href="papers/RandomizedIteate/Main_Random_iterate_Ver6.pdf">[PDF]</a><b>&nbsp;
+					<span class="style14"><span dir="LTR" style="font-weight: 400"><img height="12" src="updated.gif" width="60"></span></span></b></span></span></span></h2>
 		  <div class="box" id="abstract-RI" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We consider two of the
 					most fundamental theorems in Cryptography. The first, due to
@@ -1147,7 +1184,7 @@ that the receiver does not learn any additional information on
 					one-way functions. These powerful plausibility results shape
 					our understanding of hardness and randomness in
 					Cryptography, but unfortunately their proofs are not as
-					tight (i.e., security preserving) as one may desire.<br><br>This work revisits a technique that we call the 
+					tight (i.e., security preserving) as one may desire..r><br>This work revisits a technique that we call the 
 			  <i>randomized iterate</i>, introduced by Goldreich, Krawczyk
 					and Luby (SIAM J. on Computing '93). This technique was used
 					by Goldreich et al. to give a construction of pseudorandom
