--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -15,49 +15,25 @@
       <td style="text-align: left; vertical-align: top;"><br>
 	  <a href="http://www.cs.tau.ac.il/">
 	  <img
- src="f10_files/tau-cs.gif" height="120" width="800"></a><br><br>
+ src="../../tau-cs.gif" height="128" width="752"></a><br><br>
 	  <h1><b>0368-4162-01, Fall 2010: </b>
 	  <p><b>Foundation of Cryptography </b></p>
 	  </h1>
 	  <br><b></b>
 	  <p>
-	  <font-size="12"><b>Tuesdays 10-13, Room: קפלון 118<br></b></font-size="12">
+	  <font-size="12"><b>Tuesdays 10:00--13:00, Room: דן דויד&nbsp; 210 <br></b></font-size="12">
 	  </p>
 	  <p><b>Instructor: </b></p>
 	  <p><a href="http://www.cs.tau.ac.il/%7Eiftachh">Iftach Haitner</a>
 |
-Schreiber 20</p>
+Schreiber 20<br>Reception: Sundays 9:00-10:00 (please coordinate via email in 
+	  advance)</p>
 	  <p><big><font face="Times New Roman" size="3"><big><span lang="HE">The
-course will provide a graduate-level introduction to Cryptography. The
+course provides a graduate-level introduction to the Foundation of Cryptography. The
 goal is to give students a taste of the main concepts, abstractions and
 algorithms, as well as the main tools and techniques. Some advanced
 topics will also be touched upon. Open problems and research questions
 will be mentioned along the way. </span></big></font></big></p>
-	  <p><font face="Times New Roman" size="3"><span lang="HE"><big>The
-exact syllabus will be determined as the semester proceeds, based on
-the makeup of the class. A rough superset of the material covered
-includes:</big></span></font></p>
-      <ul>
-          <li><font face="Times New Roman" size="3"><span lang="HE">
-		  <big
- style="font-weight: bold;">Basic primitives: </big>One way functions,
-Pseudorandom generators, Stream ciphers, Pseudorandom functions, Block
-ciphers, Collision resistant hash functions, Trapdoor permutations</span></font></li>
-		  <li><font face="Times New Roman" size="3"><span lang="HE"></span>
-		  </font><font
- face="Times New Roman" size="3"><span lang="HE">
-		  <big
- style="font-weight: bold;">Basic protocols I: </big>Message
-Authentication, Digital signatures, Encryption: Symmetric, asymmetric,
-Key Exchange, Secure Communication</span></font></li>
-		  <li><font face="Times New Roman" size="3"><span lang="HE"></span>
-		  </font><font
- face="Times New Roman" size="3"><span lang="HE">
-		  <big
- style="font-weight: bold;">Basic protocols II: </big>Commitment
-schemes, Coin tossing, Zero Knowledge, Oblivious Transfer, General
-function evaluation</span></font></li>
-      </ul>
       <br><br><b><a href="#announce"><b>Announcements</b></a> </b>
 	  <p><b>
 	  <a
@@ -90,7 +66,7 @@ undergraduate course 0369.3049, is recommended but not required.</b></b></b> <b>
 		  <big><b><b><b>Course requirements</b></b></b></big></div>
       <ul>
           <li><b><b><b>Homework: 3-5 homework sets</b></b><br></b></li>
-		  <li><b>There will be a final (possibly take home) exam</b></li>
+		  <li><b>A final exam</b></li>
       </ul>
       <b><b><b><a name="Problem_Sets"></a></b></b></b><b><b><b><br></b></b></b>
 	  <br><b><b><b></b></b></b>
