--- a/index.html
+++ b/index.html
@@ -368,11 +368,10 @@ DIV.Section1 {
           <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 
     <tr>  <td align="left">
- <span class="style16" ><br><b>Teaching</b><br> </span>
+ 	   <span class="style16" ><b>Teaching Fall 11</b><br> </span>
  <span class="auto-style1" > 
  
- <a href="Courses/FOC/f10.html"   <font size=2> Foundation of Cryptography</font></a>,
- 	   <a href="Courses/CyptProto/s11.html"  <font size=2> Cryptographic Protocols </font></a></span></tr>
+ 	   <a <font="" href="Courses/FOC/Fall11/main.html" size="2">Foundation of Cryptography</font></a></span><br></tr>
  </table>
 
 
