--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -69,9 +69,10 @@ will be mentioned along the way. </span></big></font></big></p>
 		  <big><b><b><b>Prerequisite</b></b></b></big></div>
 	  <b><b><b><br>Basic complexity (the classes P, NP, BPP), basic probability. Some
 prior informal-level knowledge of cryptography, such as the
-undergraduate course <span class="auto-style1"><strong>0369.3049</strong></span>, is recommended but not required.</b></b></b> <b>&nbsp;<br>
+undergraduate course&nbsp;
+	  <span class="auto-style2"><a href="http://tau-crypto12.wikidot.com/">0369.3049</a></span>, is recommended but not required.</b></b></b> <b>&nbsp;<br>
 	  This is a graduate course, where undergrads are encouraged to take
-	  <span class="auto-style2">0369.3049</span>. In some special cases, 
+	  <span class="auto-style2"><a href="http://tau-crypto12.wikidot.com/">0369.3049</a></span>. In some special cases, 
 	  however, undergrads who got my personal permission can take the course. <br>
 	  <br><br></b><b><b><b><a name="requirements"></a></b></b></b><br>
 	  <div class="header">
