--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -33,6 +33,9 @@
 	font-size: xx-large;
 	font-weight: bold;
 }
+.auto-style10 {
+	direction: ltr;
+}
 </style>
 </head>
 
@@ -54,13 +57,13 @@
 		<p><b>Instructor: <a href="http://www.cs.tau.ac.il/~iftachh">Iftach Haitner</a> | 
 		Schreiber 20</b></p>
 		<p><strong>Reception:</strong> Sundays 9:00-10:00 (please coordinate via email in advance)</p>
-		<p><big><font face="Times New Roman" size="3"><big><strong>Abstract:</strong>
-		<span lang="HE">The 
-		course provides a graduate-level introduction to the Foundation of 
-		Cryptography. The goal is to give students a taste of the main concepts, 
-		abstractions and algorithms, as well as the main tools and techniques. 
-		Some advanced topics will also be touched upon. Open problems and 
-		research questions will be mentioned along the way. </span></big></font>
+		<p class="auto-style10"><big><font face="Times New Roman" size="3"><big><strong>Abstract:</strong>
+		<span lang="HE"><big><font size="3">This is a a graduate-level 
+		introduction to the Foundation of Cryptography. We&#39;ll study the basic 
+		primitives in cryptography (i.e., one-way functions, pseudorandom 
+		generators and zero-knowledge proofs) while focusing on formal 
+		definitions and rigorous proofs. Some more advanced topics will be 
+		touched upon.</font></big>&nbsp; </span></big></font>
 		</big></p>
 		<br />
 		<br />
