--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -33,8 +33,8 @@
 	font-size: xx-large;
 	font-weight: bold;
 }
-.auto-style10 {
-	direction: ltr;
+.auto-style11 {
+	font-size: larger;
 }
 </style>
 </head>
@@ -50,21 +50,18 @@
 		<h1><b>0368-4162-01, Fall 2011: </b></h1>
 		<p class="auto-style9">Foundation of Cryptography </p>
 		<p>
-	  <font-size="12"><b><span class="auto-style8">Tuesdays 10:00--13:00, Room: דן דויד&nbsp; 210 
+	  <font-size="12"><b><span class="auto-style8">Tuesdays 10:00-13:00, Room: דן דויד&nbsp; 210 
 		</span> <br />
 		</b></font-size="12">
 	    </p>
 		<p><b>Instructor: <a href="http://www.cs.tau.ac.il/~iftachh">Iftach Haitner</a> | 
 		Schreiber 20</b></p>
-		<p><strong>Reception:</strong> Sundays 9:00-10:00 (please coordinate via email in advance)</p>
-		<p class="auto-style10"><big><font face="Times New Roman" size="3"><big><strong>Abstract:</strong>
-		<span lang="HE"><big><font size="3">This is a a graduate-level 
-		introduction to the Foundation of Cryptography. We&#39;ll study the basic 
-		primitives in cryptography (i.e., one-way functions, pseudorandom 
-		generators and zero-knowledge proofs) while focusing on formal 
-		definitions and rigorous proofs. Some more advanced topics will be 
-		touched upon.</font></big>&nbsp; </span></big></font>
-		</big></p>
+		<p><strong><span class="auto-style11">Reception:</span></strong><span class="auto-style11"> Sundays 9:00-10:00 (please coordinate via email in advance)</span></p>
+		<p><strong><span class="auto-style11">Abstract:</span></strong><span class="auto-style11"> This is a a graduate-level introduction to the 
+		Foundation of Cryptography. We&#39;ll study the basic primitives in 
+		cryptography (i.e., one-way functions, pseudorandom generators and 
+		zero-knowledge proofs) while focusing on formal definitions and rigorous 
+		proofs. Some more advanced topics will be touched upo</span>n.</p>
 		<br />
 		<br />
 		<b><a href="#announce">Announcements</a> </b>
