--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -58,10 +58,10 @@
 		Schreiber 20</b></p>
 		<p><strong><span class="auto-style11">Reception:</span></strong><span class="auto-style11"> Sundays 9:00-10:00 (please coordinate via email in advance)</span></p>
 		<p><strong><span class="auto-style11">Abstract:</span></strong><span class="auto-style11"> This is a a graduate-level introduction to the 
-		Foundation of Cryptography. We&#39;ll study the basic primitives in 
-		cryptography (i.e., one-way functions, pseudorandom generators and 
-		zero-knowledge proofs) while focusing on formal definitions and rigorous 
-		proofs. Some more advanced topics will be touched upo</span>n.</p>
+		<strong>theoretical</strong> foundations of Cryptography. We&#39;ll study 
+		the basic 
+		cryptographic primitives (e.g., <em>one-way functions</em> and <em>pseudorandom generators</em>) while focusing on formal definitions and rigorous 
+		proofs. Some more advanced topics will be also touched upo</span>n.</p>
 		<br />
 		<br />
 		<b><a href="#announce">Announcements</a> </b>
@@ -75,11 +75,9 @@
 		<p><b><a href="#Problem_Sets">Problem Sets</a></b></p>
 		<p><b><a href="#Readings">Readings</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<br />
-		</b></p>
-		<p><b><br />
+		<br />
 	  <font-size="10"></font-size="10">
-	    </b></p>
-		<p><b><a name="announce"></a></b></p>
+		</b></p>
 		<p><br />
 		</p>
 		<div class="header">
@@ -115,8 +113,6 @@
 		</ul>
 		
 		<a name="Schedule"></a></b><br />
-		<br />
-		<br />
 		<br />
 		<br />
 		<br />
