--- a/index.html
+++ b/index.html
@@ -433,7 +433,8 @@ a <strong>single</strong> call to the non-adaptive PRF.</p>
 		  		  and <a href="http://u.cs.biu.ac.il/~omrier/">Eran O<span class="style11">mri</span></a>&nbsp; </span>
 		  </span><br>
 					<strong>Coin Flipping with Constant Bias Implies One-Way 
-					Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
+					Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">] <span dir="LTR" class="style14">
+					&nbsp;[<a href="papers/CoinFlipping/FOCS.pptx">Slides</a>]</span></span><span dir="LTR" class="style14">&nbsp;</span></span></strong><br>
 					FOCS 2011 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
 					<a href="papers/CoinFlipping/CoinFlippingtoOWF_FOCS.pdf">
