--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -72,7 +72,7 @@
 		<p><b><a href="#requirements">Course requirements</a></b></p>
 		<p><b><a href="#Schedule">Schedule and Slides</a></b><br />
 		</p>
-		<p><b><a href="#Problem_Sets">Problem Sets</a></b></p>
+		<p><b><a href="#ProblemSets">Problem Sets</a></b></p>
 		<p><b><a href="#Readings">Readings</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<br />
 		<br />
@@ -107,10 +107,14 @@
 		<div class="header">
 			<big><b>Course requirements</b></big></div>
 		<ul>
-			<li>Homework: 3-5 homework sets<b><br />
+			<li>Homework: 3-5 homework sets <b>60%</b></li>
+			<li>Grding other students excersizes<b>:
+			</b>please add&nbsp; you name and email <b>
+			<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a></b></li>
+			<li>A final (in class) exam<b>&nbsp; 60%<br />
 			</b></li>
-			<li>A final exam</li>
 		</ul>
+		<p>&nbsp;</p>
 		
 		<a name="Schedule"></a></b><br />
 		<br />
@@ -207,20 +211,26 @@
     					    					  </big></div>
 
 
-				
+			 <a name="ProblemSets"></a> 	
 		<div class="header">
 			<big><b>Problem Sets</b></big></div>
-		Here are some
-		<a href="http://www.cs.tau.ac.il/~iftachh/Courses/FOC/f10-materials/ps-guidelines.pdf">
-		guidelines for solutions.</a> <a name="Readings"></a>
+		Pleass add your name to the graders list
+		<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a>
+		<br />
+		<br />
+		Writing yor solution using <strong>Latex</strong> is recomended&nbsp;&nbsp;
+		<a name="Readings"></a><br />
+		<br />
+		<a href="http://texniccenter.org/" target="_blank">
+		http://texniccenter.org/</a> is a&nbsp; decent open-source developing 
+		environment.<br />
+		<br />
+		<a href="http://ftp.cc.uoc.gr/mirrors/CTAN/info/lshort/english/lshort.pdf" target="_blank">
+		The not so short introduction to <span class="il">Latex</span></a> is a 
+		good introductionary text.<br />
+		<br />
 		<b><br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		</b>
+		<br /><br /><br /><br /><br /><br /><br /></b>
 		<div class="header">
 			<big><b>Readings</b><p>You may find the following to be useful references (but beware that 
 		some of the notation, conventions, and definitions may differ slightly 
