--- a/index.html
+++ b/index.html
@@ -368,10 +368,12 @@ DIV.Section1 {
           <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 
     <tr>  <td align="left">
- 	   <span class="style16" ><b>Teaching Fall 11</b><br> </span>
- <span class="auto-style1" > 
- 
- 	   <a <font="" href="Courses/FOC/Fall11/main.html" size="2">Foundation of Cryptography</font></a></span><br></tr>
+ 	   <span class="style16" ><b>Teaching </b><br> </span>
+ 	   <span class="auto-style6">
+		<a <font="" href="Courses/FOC/Fall11/main.html" size="2">Foundation of 
+		Cryptography (Fall 11)</a>,
+		<a <font="" href="Courses/Seminars/ComComp/index.html" size="2">Student 
+		seminar on Communication Complexity (Spring 12)</a></span><br></tr>
  </table>
 
 
@@ -485,6 +487,14 @@ We make progress towards answering the above fundamental question, showing that
 }
 .auto-style4 {
 	color: #0F0F4B;
+}
+.auto-style5 {
+	color: #000000;
+	font-size: medium;
+}
+.auto-style6 {
+	color: #000000;
+	font-size: small;
 }
 </style>
  <span class="style5"> <span class="auto-style4">Bellare and Rogaway [ACM 
