--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -216,7 +216,8 @@
 			<big><b>Problem Sets</b></big></div>
 		Pleass add your name to the graders list
 		<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a>
-		<br />
+		and email (Title: Name, Id, excersize you are taking care of)&nbsp; to
+		<a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a><br />
 		<br />
 		Writing yor solution using <strong>Latex</strong> is recomended&nbsp;&nbsp;
 		<a name="Readings"></a><br />
