--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -107,10 +107,31 @@
 		<div class="header">
 			<big><b>Course requirements</b></big></div>
 		<ul>
-			<li>Homework: 3-5 homework sets <b>60%</b></li>
+			<li>Homework: 3-5 homework sets 3<b>0%<br />
+			</b>Answers (word, PDF or scanned text) should be sent to&nbsp;
+		<a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a> (Title: 
+			Question #, Name, Id). <br />
+			Late submissions will be <strong>ignored</strong> unless approved&nbsp; 
+			by me &nbsp;first<b>.<br />
+		<br />
+			</b>Writing yor solution using <strong>Latex</strong> is recomended&nbsp;&nbsp;
+		<a name="Readings"></a><b><br />
+		<br />
+			</b>
+		<a href="http://texniccenter.org/" target="_blank">
+		http://texniccenter.org/</a><b> is a&nbsp; decent open-source developing 
+		environment.<br />
+		<br />
+		<a href="http://ftp.cc.uoc.gr/mirrors/CTAN/info/lshort/english/lshort.pdf" target="_blank">
+		The not so short introduction to <span class="il">Latex</span></a> is a 
+		good introductionary text.<br />
+			</b></li>
 			<li>Grding other students excersizes<b>:
-			</b>please add&nbsp; you name and email <b>
-			<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a></b></li>
+			</b>Pleass add your name to the graders list
+		<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a>
+			and email&nbsp; <a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a> 
+			(Title: Grader #, Name, Id)&nbsp;<br />
+			</li>
 			<li>A final (in class) exam<b>&nbsp; 60%<br />
 			</b></li>
 		</ul>
@@ -214,21 +235,7 @@
 			 <a name="ProblemSets"></a> 	
 		<div class="header">
 			<big><b>Problem Sets</b></big></div>
-		Pleass add your name to the graders list
-		<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a>
-		and email (Title: Name, Id, excersize you are taking care of)&nbsp; to
-		<a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a><br />
 		<br />
-		Writing yor solution using <strong>Latex</strong> is recomended&nbsp;&nbsp;
-		<a name="Readings"></a><br />
-		<br />
-		<a href="http://texniccenter.org/" target="_blank">
-		http://texniccenter.org/</a> is a&nbsp; decent open-source developing 
-		environment.<br />
-		<br />
-		<a href="http://ftp.cc.uoc.gr/mirrors/CTAN/info/lshort/english/lshort.pdf" target="_blank">
-		The not so short introduction to <span class="il">Latex</span></a> is a 
-		good introductionary text.<br />
 		<br />
 		<b><br />
 		<br /><br /><br /><br /><br /><br /><br /></b>
