--- a/index.html
+++ b/index.html
@@ -396,13 +396,13 @@ in Reverse Chronological Order</font></h1>
 					<p><span dir="LTR"><span class="style14">Itay Berman</span></span><span style="font-weight: 400;"><span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">
 					and Iftach Haitner</span> </span>
 		  </span><br>
-					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
+					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-adaptivePRF')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><img height="11" src="new.gif" width="28"><br>
 					Manuscript 2011 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
 					<a href="papers/AdaptivePRF/AdaptivePRF.pdf">[PDF]</a></span></span></span></p>
 					</li>
 					
-			<div class="box" id="abstract-CoinFlipping" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
+			<div class="box" id="abstract-adaptivePRF" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 					  <h2><span style="font-weight: 400;"> Unlike the standard notion of pseudorandom functions (PRF), a non-adaptive 
 PRF is only required to be indistinguishable from random in the eyes of a 
 non-adaptive distinguisher (i.e., one that prepares its oracle calls in 
