--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -170,8 +170,8 @@
   <p class="auto-style5">Nov. 1</p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
-  <p class="auto-style6">Introduction; Administrativia, course topics, One-way 
-  functions.</p>
+  <p class="auto-style6">Introduction; Administrativia, course topics, one-way 
+  functions. <a href="[slides]">[slides]</a></p>
   </td>
  </tr>
  <tr style="">
