On the Power of Random Oracles

--- a/index.html
+++ b/index.html
@@ -391,7 +391,9 @@ DIV.Section1 {
 in Reverse Chronological Order</font></h1>
 
       <ul>
-      
+    
+<!-- On the Power of Random Oracles -->
+  
    <li>
 	<p><span style="font-weight: 400;">
 	<span dir="LTR" class="style14">
