<!-- On the Power of Random Oracles -->

--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@ constructed in the random function model, yielding that such protocol cannot be 
   </span></h2>
 </div>
 
+<!-- On the Power of Random Oracles -->
 
 
 
