--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -171,7 +171,7 @@
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
   <p class="auto-style6">Introduction; Administrativia, course topics, one-way 
-  functions. <a href="[slides]">[slides]</a></p>
+  functions. <a href="Introduction_admin.pdf">[slides]</a></p>
   </td>
  </tr>
  <tr style="">
