--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -127,8 +127,9 @@
 		good introductionary text.<br />
 			</b></li>
 			<li>Grding other students excersizes<b>:
-			</b>Pleass add your name to the graders list
+			</b>Please add your name to the graders list
 		<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a>
+			(only name, <strong>no</strong> email address )
 			and email&nbsp; <a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a> 
 			(Title: Grader #, Name, Id)&nbsp;<br />
 			</li>
