--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -107,25 +107,28 @@
 		<div class="header">
 			<big><b>Course requirements</b></big></div>
 		<ul>
-			<li>Homework: 3-5 homework sets 3<b>0%<br />
-			</b>Answers (word, PDF or scanned text) should be sent to&nbsp;
-		<a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a> (Title: 
-			Question #, Name, Id). <br />
-			Late submissions will be <strong>ignored</strong> unless approved&nbsp; 
+			<li>Homework: 3-5 homework sets 3<b>0%<br /></b>Answers (word, PDF or scanned text) should be sent to&nbsp;
+			<a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a> (Title: 
+			Question #, Name, Id). <br />Late submissions will be <strong>ignored</strong> unless approved&nbsp; 
 			by me &nbsp;first<b>.<br />
-		<br />
-			</b>Writing yor solution using <strong>Latex</strong> is recomended&nbsp;&nbsp;
-		<a name="Readings"></a><b><br />
-		<br />
 			</b>
-		<a href="http://texniccenter.org/" target="_blank">
-		http://texniccenter.org/</a><b> is a&nbsp; decent open-source developing 
-		environment.<br />
-		<br />
-		<a href="http://ftp.cc.uoc.gr/mirrors/CTAN/info/lshort/english/lshort.pdf" target="_blank">
-		The not so short introduction to <span class="il">Latex</span></a> is a 
-		good introductionary text.<br />
-			</b></li>
+			<ul>
+				<li><b>&nbsp;</b><span class="auto-style8">Writing yor solution using 
+				</span><strong><span class="auto-style8">Latex</span></strong><span class="auto-style8"> is recomended&nbsp;&nbsp;(and 
+				a must for the grader of the excersize, see below)</span><ul>
+					<li>&nbsp;<a href="http://texniccenter.org/" target="_blank">http://texniccenter.org/</a><b> is a&nbsp; decent open-source developing 
+		environment.</b></li>
+					<li><b>
+					<a href="http://ftp.cc.uoc.gr/mirrors/CTAN/info/lshort/english/lshort.pdf" target="_blank">The not so short introduction to 
+					<span class="il">Latex</span></a> is a 
+		good introductionary text.</b></li>
+					<li><span class="auto-style8">See <b>
+					<a href="LatexExample.zip">example</a> <br />
+					</b></span></li>
+				</ul>
+				</li>
+			</ul>
+			</li>
 			<li>Grding other students excersizes<b>:
 			</b>Please add your name to the graders list
 		<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a>
@@ -187,7 +190,9 @@
 			<big><b>Nov. <span class="auto-style7">8</span></b></big></p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
-  <p class="MsoNormal">&nbsp;</p>
+  <p class="auto-style6">Computational indistinguishability and pseudorandom 
+  generators.
+			<big><b><a href="Pseudorandomness.pdf">[slides]</a></b></big></p>
   </td>
  </tr>
  <tr style="">
@@ -198,7 +203,7 @@
   <p class="auto-style5">Nov. 15</p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
-  <p class="MsoNormal">&nbsp;</p>
+  <p class="auto-style6">Hardcore predicate for any one-way functions</p>
   </td>
  </tr>
  
@@ -212,7 +217,7 @@
 			<big><b>Nov. 22</b></big></p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
-  <p class="MsoNormal">&nbsp;</p>
+  <p class="auto-style6">Pseudorandom functions</p>
   </td>
  </tr>
 </tbody></table>
@@ -236,10 +241,11 @@
 			 <a name="ProblemSets"></a> 	
 		<div class="header">
 			<big><b>Problem Sets</b></big></div>
-		<br />
-		<br />
-		<b><br />
-		<br /><br /><br /><br /><br /><br /><br /></b>
+		<ol>
+			<li>Exe 1, due date <strong>Nov 15</strong> ( to be published on Nov 
+			8) <br /><b><br /><br /><br /><br /><br /><br /><br /><br /></b>
+			</li>
+		</ol>
 		<div class="header">
 			<big><b>Readings</b><p>You may find the following to be useful references (but beware that 
 		some of the notation, conventions, and definitions may differ slightly 
