--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -106,16 +106,21 @@
 		<br />
 		<div class="header">
 			<big><b>Course requirements</b></big></div>
-		<ul>
-			<li>Homework: 3-5 homework sets 3<b>0%<br /></b>Answers (word, PDF or scanned text) should be sent to&nbsp;
-			<a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a> (Title: 
-			Question #, Name, Id). <br />Late submissions will be <strong>ignored</strong> unless approved&nbsp; 
-			by me &nbsp;first<b>.<br />
-			</b>
+		<ol>
+			<li><span class="auto-style11">Homework:</span> 3-5 homework sets 3<b>0%<br />
+			</b>Answers (word, PDF or scanned text) should be sent to&nbsp;
+			<a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a> 
+			(Title: Question #,&nbsp; Israeli Id #)&nbsp; as
+			<span class="auto-style8">&nbsp;PDFs</span><br />Late submissions will be 
+			<strong>ignored</strong> unless approved&nbsp; 
+			by me &nbsp;first<b>.<br /></b>
 			<ul>
-				<li><b>&nbsp;</b><span class="auto-style8">Writing yor solution using 
-				</span><strong><span class="auto-style8">Latex</span></strong><span class="auto-style8"> is recomended&nbsp;&nbsp;(and 
-				a must for the grader of the excersize, see below)</span><ul>
+				<li><b>&nbsp;</b><span class="auto-style8">Writing your solution using
+				</span><strong><span class="auto-style8">Latex</span></strong><span class="auto-style8"> is 
+				recommended&nbsp;&nbsp;(and 
+				a must for the grader of the exercise, see below). Otherwise, 
+				send your solutions as PDFs </span>
+				<ul>
 					<li>&nbsp;<a href="http://texniccenter.org/" target="_blank">http://texniccenter.org/</a><b> is a&nbsp; decent open-source developing 
 		environment.</b></li>
 					<li><b>
@@ -123,22 +128,27 @@
 					<span class="il">Latex</span></a> is a 
 		good introductionary text.</b></li>
 					<li><span class="auto-style8">See <b>
-					<a href="LatexExample.zip">example</a> <br />
-					</b></span></li>
+					<a href="LatexExample.zip">example</a> <br /></b></span>
+					</li>
 				</ul>
 				</li>
 			</ul>
 			</li>
-			<li>Grding other students excersizes<b>:
+			<li><span class="auto-style11">Grading other students exercises</span><b>:
 			</b>Please add your name to the graders list
-		<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a>
+			<a href="http://focs11graderlist.wikispaces.com/Grader+List">here</a>
 			(only name, <strong>no</strong> email address )
 			and email&nbsp; <a href="mailto:foc.exc@gmail.com">mailto:foc.exc@gmail.com</a> 
 			(Title: Grader #, Name, Id)&nbsp;<br />
-			</li>
-			<li>A final (in class) exam<b>&nbsp; 60%<br />
+			When grading, I recommend writing your comments on the submission 
+			itself, using a PDF writer that enables adding comment (e.g.,
+			<a href="http://download.cnet.com/Adobe-Reader-X/3000-10743_4-10000062.html">&nbsp;Adobe 
+			Reader X</a>) <br />
+			<br />
+			<br /></li>
+			<li><span class="auto-style11">A final (in class) exam</span><b><span class="auto-style11">&nbsp; 60%</span><br />
 			</b></li>
-		</ul>
+		</ol>
 		<p>&nbsp;</p>
 		
 		<a name="Schedule"></a></b><br />
@@ -174,7 +184,8 @@
   <p class="auto-style5">Nov. 1</p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
-  <p class="auto-style6">Introduction; Administrativia, course topics, one-way 
+  <p class="auto-style6">Introduction; Administrativia, course topics, basic 
+  notations, one-way 
   functions. <a href="Introduction_admin.pdf">[slides]</a></p>
   </td>
  </tr>
@@ -192,7 +203,7 @@
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
   <p class="auto-style6">Computational indistinguishability and pseudorandom 
   generators .
-			<big><b><a href="Pseudorandomness.pdf">[slides (still very rough!)]</a></b></big></p>
+			<b><a href="Pseudorandomness.pdf">[slides]</a></b></p>
   </td>
  </tr>
  <tr style="">
@@ -203,7 +214,7 @@
   <p class="auto-style5">Nov. 15</p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
-  <p class="auto-style6">Hardcore predicate for any one-way functions</p>
+  <p class="auto-style6">Finish class 2 and Hardcore predicate for any one-way functions</p>
   </td>
  </tr>
  
@@ -242,7 +253,7 @@
 		<div class="header">
 			<big><b>Problem Sets</b></big></div>
 		<ol>
-			<li>Exe 1, due date <strong>Nov 15</strong> ( to be published on Nov 
+			<li>Exe 1, due date <strong>Nov </strong> 20 ( to be published on Nov 
 			8) <br /><b><br /><br /><br /><br /><br /><br /><br /><br /></b>
 			</li>
 		</ol>
