--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -82,7 +82,12 @@
 		</p>
 		<div class="header">
 			<big><b>Announcements</b></big></div>
-		<p><b><a name="Prerequisite"></a></b></p>
+		<ol>
+			<li><b><a name="Prerequisite"></a></b>The website of the Greater 
+			Tel-Aviv Area Crypto seminar (GTACS) can be found
+			<a href="http://www.cs.tau.ac.il/cseminar/">here</a><b>. </b></li>
+			<li>Exe 1 is out. Due date Nov 20.</li>
+		</ol>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -253,8 +258,8 @@
 		<div class="header">
 			<big><b>Problem Sets</b></big></div>
 		<ol>
-			<li>Exe 1, due date <strong>Nov </strong> 20 ( to be published on Nov 
-			8) <br /><b><br /><br /><br /><br /><br /><br /><br /><br /></b>
+			<li><a href="ProblemSets/PS1.pdf">Exe 1</a>, due date <strong>Nov </strong> 20 
+			. <br /><b><br /><br /><br /><br /><br /><br /><br /><br /></b>
 			</li>
 		</ol>
 		<div class="header">
@@ -262,9 +267,6 @@
 		some of the notation, conventions, and definitions may differ slightly 
 		from lecture):</p>
 			</big></div>
-		<p>You may find the following to be useful references (but beware that 
-		some of the notation, conventions, and definitions may differ slightly 
-		from lecture):</p>
 		<b>Books: </b>
 		<ul type="disc">
 			<li class="MsoNormal" style="">Jonathan Katz and Yehuda Lindell.&nbsp; <i>
