--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -86,7 +86,8 @@
 			<li><b><a name="Prerequisite"></a></b>The website of the Greater 
 			Tel-Aviv Area Crypto seminar (GTACS) can be found
 			<a href="http://www.cs.tau.ac.il/cseminar/">here</a><b>. </b></li>
-			<li>Exe 1 is out. Due date Nov 20.</li>
+			<li>
+			<big>Problem set<b> </b></big>1 is out. Due date Nov 20.</li>
 		</ol>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
@@ -258,7 +259,7 @@
 		<div class="header">
 			<big><b>Problem Sets</b></big></div>
 		<ol>
-			<li><a href="ProblemSets/PS1.pdf">Exe 1</a>, due date <strong>Nov </strong> 20 
+			<li><a href="ProblemSets/PS1.pdf">PS1</a> (exe 1-3), due date <strong>Nov </strong> 20 
 			. <br /><b><br /><br /><br /><br /><br /><br /><br /><br /></b>
 			</li>
 		</ol>
