--- a/Courses/FOC/Fall11/main.html
+++ b/Courses/FOC/Fall11/main.html
@@ -207,7 +207,7 @@
 			<big><b>Nov. <span class="auto-style7">8</span></b></big></p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
-  <p class="auto-style6">Computational indistinguishability and pseudorandom 
+  <p class="auto-style6">Finish lecture #1 and, Computational indistinguishability and pseudorandom 
   generators .
 			<b><a href="Pseudorandomness.pdf">[slides]</a></b></p>
   </td>
@@ -220,7 +220,8 @@
   <p class="auto-style5">Nov. 15</p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; padding: 2.05pt;" width="720">
-  <p class="auto-style6">Finish class 2 and Hardcore predicate for any one-way functions</p>
+  <p class="auto-style6">Finish lecture #2 and Hardcore predicate for any one-way functions.
+  <b><a href="HardCorePredicates.pdf">[slides]</a></b></p>
   </td>
  </tr>
  
@@ -234,7 +235,7 @@
 			<big><b>Nov. 22</b></big></p>
   </td>
   <td style="width: 539.85pt; border-width: medium 1pt 1pt medium; border-style: none solid solid none; border-color: -moz-use-text-color rgb(136, 136, 136) rgb(136, 136, 136) -moz-use-text-color; background: none repeat scroll 0% 0% rgb(204, 255, 204); padding: 2.05pt;" width="720">
-  <p class="auto-style6">Pseudorandom functions</p>
+  <p class="auto-style6">Finish lecture #3 and Pseudorandom functions</p>
   </td>
  </tr>
 </tbody></table>
